--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Build Tools #
+###################
+/build/
+/target/
+.gradle
+
 # Compiled source #
 ###################
 *.com
@@ -7,11 +13,33 @@
 *.o
 *.so
 
-# IDE generated files/folders #
-######################
-/.idea
-/build
-/target
+# IDE ignores #
+# Eclipse generated files and folders #
+#######################################
+.settings/
+bin/
+tmp/
+*.bak
+*~.nib
+*.launch                # Locally stored "Eclipse launch configurations"
+*.pydevproject
+*.swp
+*.tmp
+.buildpath              # PDT-specific
+.classpath              # JDT-specific (Eclipse Java Development Tools)
+.cproject               # CDT-specific
+.externalToolBuilders/  # External tool builders
+.factorypath            # Java annotation processor (APT)
+.loadpath
+.metadata
+.project                # Eclipse Core
+.target                 # sbteclipse plugin
+.texlipse               # TeXlipse plugin
+local.properties
+
+# IntelliJ generated files/folders #
+####################################
+/.idea/
 /*.iml
 
 # Logs and databases #
@@ -22,11 +50,11 @@
 
 # OS generated files #
 ######################
+.Trashes/
 .DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
-.Trashes
 ehthumbs.db
 Thumbs.db
 
