Add Gradle ignores

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
 # Build Tools #
 ###################
+## Gradle files and folders ##
+##############################
+.gradle/
+/build/
+gradle-app.setting
+.gradletasknamecache
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+## Maven ##
 /target/
-.gradle
 
 # Compiled source #
 ###################
